--- a/DockerFile
+++ b/DockerFile
@@ -5,11 +5,12 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /app
+COPY requirement.txt.
 
-# Install any needed packages specified in requirements.txt
-RUN pip install requirement.txt
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
+COPY ./app
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
 
