--- a/DockerFile
+++ b/DockerFile
@@ -5,10 +5,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY requirement.txt .
+COPY requriement.txt .
 
 # Install dependencies
-RUN pip install --no-cache-dir -r requirement.txt
+RUN pip install --no-cache-dir -r requriement.txt
 
 COPY . .
 # Make port 5000 available to the world outside this container
